--- a/playbook.yml
+++ b/playbook.yml
@@ -1,7 +1,1 @@
-As per our initial discussion, we were informed that a vendor request would be created and that you would be engaging them early this morning. However, we will go ahead and contact the Command Center as well for further assistance.
-
-Regarding the LBaaS configuration, we understand that the old and new LBaaS setups are on the same device, which would likely result in similar behavior. That said, we’ve tested the uploads both with and without LBaaS, and when bypassing LBaaS and using the direct URL, the file uploads work as expected and significantly faster.
-
-We would like to ask a few additional questions to help identify the issue:
-
-Are there any server-side changes or differences when using the load balancer versus the direct URL?
+Additionally, from your perspective, this appears to be a server-side issue. Could you please let us know what specific issues you're seeing from the logs?
