--- a/playbook.yml
+++ b/playbook.yml
@@ -1,3 +1,7 @@
-Hi Nathan,
+I wanted to provide an update regarding the ongoing issue. The LBaaS/vendor team is still triaging the problem, and last Friday we were able to confirm that the issue is not related to the OS (RHEL).
 
-As you're aware, installing Wireshark requires multiple approvals and cannot be completed in a single day. Additionally, do we really need Red Hat here? Since it’s an OS, I don’t believe it's contributing to the delay. Perhaps we can seek assistance from the Unix team to capture the TCP connections without involving Avi?
+Today, we will be capturing client-side network logs using Wireshark with assistance from the LBaaS team to gather more insights.
+
+In the meantime, we have implemented a temporary fix by adjusting the buffer size in LBaaS, which has reduced the upload time to approximately 1 to 2 minutes per file.
+
+If the LBaaS team is unable to determine the root cause, we plan to proceed with permanently implementing the buffer size changes from LBaaS as a workaround.
